<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.victor_xiao.calculator.MainActivity">

    <LinearLayout
        android:id="@+id/layout_6"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rg_radix"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/bt_pow"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_pow"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_sin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_sin"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_cos"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_cos"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <Button
            android:id="@+id/bt_plus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_plus"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_5"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_6"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_ce"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_ce"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_c"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_c"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_del"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_del"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_minus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_minus"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_4"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_7"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_8"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_8"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_9"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_9"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_multiply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_multiply"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_3"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_4"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_5"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_6"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_divide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nom"
            android:text="@string/bt_divide"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_1_2"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_3"
        android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/layout_12"
        style="?android:buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_2"
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/bg_nom"
                android:text="@string/bt_1"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bt_2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/bg_nom"
                android:text="@string/bt_2"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bt_3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/bg_nom"
                android:text="@string/bt_3"
                android:textColor="@color/black"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_1"
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_negate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/bg_nom"
                android:text="@string/bt_negate"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bt_0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/bg_nom"
                android:text="@string/bt_0"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bt_point"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/bg_nom"
                android:text="@string/bt_point"
                android:textColor="@color/black"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>
        <Button
            android:id="@+id/bt_equal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@drawable/bg_eq"
            android:text="@string/bt_equal"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_radix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_input"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_decimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/rb_dec"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_octal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_oct"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_binary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_bin"
            android:textSize="20sp" />
    </RadioGroup>


    <TextView
        android:id="@+id/tv_output"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_output"
        android:gravity="end"
        android:text="@string/bt_0"
        android:textAlignment="textEnd"
        android:textIsSelectable="true"
        android:textSize="30sp" />

</RelativeLayout>
